k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bendy-web-sential
  labels:
    app: bendy-web-sential
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5173
    name: frontend
    protocol: TCP
  - port: 8080
    targetPort: 8080
    name: gateway
    protocol: TCP
  - port: 3000
    targetPort: 3000
    name: admin
    protocol: TCP
  selector:
    app: bendy-web-sential
---
apiVersion: v1
kind: Service
metadata:
  name: bendy-web-sential-admin-lb
  labels:
    app: bendy-web-sential
spec:
  type: LoadBalancer
  ports:
  - port: 30080
    targetPort: 3000
    name: admin-http
    protocol: TCP
  - port: 30081
    targetPort: 8080
    name: gateway-http
    protocol: TCP
  selector:
    app: bendy-web-sential
